// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChartRange /> should edit 1`] = `
<ChartForm
  chart={
    Object {
      "attribute": "system.type",
      "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
      "type": "facet",
    }
  }
  chartIndex={0}
  dispatch={[Function]}
  isEditing={true}
  setIsEditing={[Function]}
/>
`;

exports[`<ChartRange /> should not render without an attribute 1`] = `
<ChartForm
  chart={
    Object {
      "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
      "type": "range",
    }
  }
  chartIndex={0}
  dispatch={[Function]}
  isEditing={false}
  setIsEditing={[Function]}
/>
`;

exports[`<ChartRange /> should render properly 1`] = `
.emotion-26 {
  height: 100%;
  overflow: hidden;
}

.emotion-25 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
  border-radius: 2px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-7 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 24px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6:hover button svg {
  opacity: 1;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  padding: 6px;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2 svg {
  color: #808080;
}

.emotion-2:hover,
.emotion-2.focus-visible:focus {
  background-color: #3b3b3b;
}

.emotion-2:hover svg,
.emotion-2.focus-visible:focus svg {
  opacity: 1;
  color: #ffffff;
}

.emotion-1 {
  opacity: 0;
}

.emotion-3 {
  width: 2px;
}

.emotion-24 {
  overflow: hidden;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-24 .ErrorBoundary > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-24 .Loading {
  background-color: transparent;
  box-shadow: none;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-23 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: calc(33.33333333333333% - 10.666666666666666px);
  margin-right: 16px;
  padding-bottom: 16px;
}

.emotion-23 > div:nth-of-type(3n) {
  margin-right: 0;
}

.emotion-8 {
  text-transform: uppercase;
  font-family: Roboto Condensed;
  color: #b3b3b3;
  padding-bottom: 4px;
}

.emotion-9 {
  border: 1px solid #3b3b3b;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-18 {
  height: 19px;
  margin-bottom: 4px;
}

.emotion-22 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.emotion-21 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #808080;
  font-family: Roboto Condensed;
}

.emotion-21:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-21[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-21:hover,
.emotion-21.focus-visible:focus {
  color: #ffffff;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

<div
  className="emotion-26"
>
  <div
    className="emotion-25"
  >
    <div
      className="emotion-7"
    >
      <div
        className="emotion-6"
      >
        <h3
          className="emotion-0"
        >
          source.filesize
        </h3>
        <button
          aria-label="Edit Chart"
          className="emotion-2"
          onClick={[Function]}
          title="Edit"
          type="button"
        >
          <svg
            className="emotion-1"
            data-file-name="pen.svg"
            width={20}
          />
        </button>
        <div
          className="emotion-3"
        />
        <button
          aria-label="Delete Chart"
          className="emotion-2"
          onClick={[Function]}
          title="Delete"
          type="button"
        >
          <svg
            className="emotion-1"
            data-file-name="cross.svg"
            width={20}
          />
        </button>
      </div>
    </div>
    <div
      className="emotion-24"
    >
      <div
        className="emotion-23"
      >
        <div>
          <div
            className="emotion-8"
          >
            count
          </div>
          <div
            className="emotion-9"
          >
            580
          </div>
        </div>
        <div>
          <div
            className="emotion-8"
          >
            min
          </div>
          <div
            className="emotion-9"
          >
            180
          </div>
        </div>
        <div>
          <div
            className="emotion-8"
          >
            max
          </div>
          <div
            className="emotion-9"
          >
            8,525
          </div>
        </div>
        <div>
          <div
            className="emotion-8"
          >
            avg
          </div>
          <div
            className="emotion-9"
          >
            899.569
          </div>
        </div>
        <div>
          <div
            className="emotion-8"
          >
            sum
          </div>
          <div
            className="emotion-9"
          >
            521,750
          </div>
        </div>
        <div>
          <div
            className="emotion-18"
          >
             
          </div>
          <div
            className="emotion-22"
          >
            <button
              aria-label="Add Filter"
              className="emotion-21"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-20"
              >
                <div
                  className="emotion-19"
                >
                  <svg
                    data-file-name="filter.svg"
                    width={20}
                  />
                </div>
                Add Filter
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChartRange /> should render properly without data 1`] = `
.emotion-16 {
  height: 100%;
  overflow: hidden;
}

.emotion-15 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
  border-radius: 2px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-7 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 24px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6:hover button svg {
  opacity: 1;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  padding: 6px;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2 svg {
  color: #808080;
}

.emotion-2:hover,
.emotion-2.focus-visible:focus {
  background-color: #3b3b3b;
}

.emotion-2:hover svg,
.emotion-2.focus-visible:focus svg {
  opacity: 1;
  color: #ffffff;
}

.emotion-1 {
  opacity: 0;
}

.emotion-3 {
  width: 2px;
}

.emotion-14 {
  overflow: hidden;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-14 .ErrorBoundary > div {
  background-color: transparent;
  box-shadow: none;
}

.emotion-14 .Loading {
  background-color: transparent;
  box-shadow: none;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-13 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: calc(33.33333333333333% - 10.666666666666666px);
  margin-right: 16px;
  padding-bottom: 16px;
}

.emotion-13 > div:nth-of-type(3n) {
  margin-right: 0;
}

.emotion-8 {
  height: 19px;
  margin-bottom: 4px;
}

.emotion-12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
}

.emotion-11 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #808080;
  font-family: Roboto Condensed;
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-11:hover,
.emotion-11.focus-visible:focus {
  color: #ffffff;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

<div
  className="emotion-16"
>
  <div
    className="emotion-15"
  >
    <div
      className="emotion-7"
    >
      <div
        className="emotion-6"
      >
        <h3
          className="emotion-0"
        >
          source.filesize
        </h3>
        <button
          aria-label="Edit Chart"
          className="emotion-2"
          onClick={[Function]}
          title="Edit"
          type="button"
        >
          <svg
            className="emotion-1"
            data-file-name="pen.svg"
            width={20}
          />
        </button>
        <div
          className="emotion-3"
        />
        <button
          aria-label="Delete Chart"
          className="emotion-2"
          onClick={[Function]}
          title="Delete"
          type="button"
        >
          <svg
            className="emotion-1"
            data-file-name="cross.svg"
            width={20}
          />
        </button>
      </div>
    </div>
    <div
      className="emotion-14"
    >
      <div
        className="emotion-13"
      >
        <div>
          <div
            className="emotion-8"
          >
             
          </div>
          <div
            className="emotion-12"
          >
            <button
              aria-label="Add Filter"
              className="emotion-11"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-10"
              >
                <div
                  className="emotion-9"
                >
                  <svg
                    data-file-name="filter.svg"
                    width={20}
                  />
                </div>
                Add Filter
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
